# FX_TraceRAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/docs/: access-control.md  backup-and-restore.md  calibration.md  device-network-recovery.md  incident-response.md  shift-handover.md
docs/: architecture.md
src/tracerag/: __init__.py  agent.py  api.py  mcp_server.py  models.py  retrieval.py  service.py  settings.py
tests/: conftest.py  test_api.py  test_mcp_tools.py  test_models.py  test_retrieval.py
