[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracerag"
version = "0.1.0"
description = "Async, typed RAG assistant for operational documentation."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [{ name = "TraceRAG" }]
keywords = ["rag", "mcp", "pydantic-ai", "sop", "sse", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Documentation",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic-ai>=2.0",
    "fastmcp>=2.3",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1.350",
]

[project.scripts]
tracerag = "tracerag.api:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line-length enforced by formatter; keep readable wrapping

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
pythonpath = ["src"]
filterwarnings = ["error::DeprecationWarning:tracerag.*"]